WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144832
Page overlay action context override should indicate the source of the request
https://bugs.webkit.org/show_bug.cgi?id=144832
Summary
Page overlay action context override should indicate the source of the request
Tim Horton
Reported
2015-05-09 15:12:42 PDT
Page overlay action context override should indicate the source of the request
Attachments
Patch
(14.13 KB, patch)
2015-05-09 15:13 PDT
,
Tim Horton
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-05-09 15:13:22 PDT
Created
attachment 252785
[details]
Patch
WebKit Commit Bot
Comment 2
2015-05-09 15:15:18 PDT
Attachment 252785
[details]
did not pass style-queue: ERROR: Source/WebKit2/WebProcess/WebPage/WebPageOverlay.cpp:123: Declaration has space between type name and * in DDActionContext *WebPageOverlay [whitespace/declaration] [3] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Darin Adler
Comment 3
2015-05-10 13:54:57 PDT
Comment on
attachment 252785
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=252785&action=review
> Source/WebKit2/WebProcess/InjectedBundle/API/c/WKBundlePageOverlay.h:47 > +typedef uint32_t _WKBundlePageOverlayActionContextRequestType;
Not sure I understand the rationale behind the leading underscore here.
Tim Horton
Comment 4
2015-05-11 10:42:01 PDT
(In reply to
comment #3
)
> Comment on
attachment 252785
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=252785&action=review
> > > Source/WebKit2/WebProcess/InjectedBundle/API/c/WKBundlePageOverlay.h:47 > > +typedef uint32_t _WKBundlePageOverlayActionContextRequestType; > > Not sure I understand the rationale behind the leading underscore here.
I think it's to avoid naming conflicts with potential future Modern API enum names (the enum values are similarly uniqified by the leading 'k'). Anders points out that this doesn't help if we want to add Modern SPI (because that would have a leading underscore as well), but we don't really have a plan for that yet.
https://trac.webkit.org/changeset/184106
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug